--- a/VacationPy/VacationPy.ipynb/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb/VacationPy.ipynb
@@ -41,11 +41,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: int64)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "city_data = []\n",
+    "\n",
+    "city_data = pd.DataFrame(city_data)\n",
+    "\n",
+    "city_data.to_csv(\"WeatherPy.csv\", encoding= \"utf-8\",index=False)\n",
+    "\n",
+    "city_data.count()"
    ]
   },
   {
@@ -60,10 +79,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'loc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m gmaps\u001b[38;5;241m.\u001b[39mconfigure(api_key\u001b[38;5;241m=\u001b[39mg_key)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#set locations (lat, long) data for the heatmap\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m locations \u001b[38;5;241m=\u001b[39m \u001b[43mcity_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m[:, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mActual Latitude\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mActual Longitude\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Plot Heatmap\u001b[39;00m\n\u001b[0;32m      9\u001b[0m fig \u001b[38;5;241m=\u001b[39m gmaps\u001b[38;5;241m.\u001b[39mfigure()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'loc'"
+     ]
+    }
+   ],
+   "source": [
+    "# Configure gmaps\n",
+    "gmaps.configure(api_key=g_key)\n",
+    "\n",
+    "#set locations (lat, long) data for the heatmap\n",
+    "locations = city_data.loc[:, [\"Actual Latitude\", \"Actual Longitude\"]]\n",
+    "\n",
+    "\n",
+    "# Plot Heatmap\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "\n",
+    "# Create heat layer\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=cities_examined[\"Humidity (%)\"], \n",
+    "                                 dissipating=False, max_intensity=100,\n",
+    "                                 point_radius=3)\n",
+    "\n",
+    "\n",
+    "# Add layer\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "# Display figure\n",
+    "fig\n"
+   ]
   },
   {
    "cell_type": "code",
